# geosciloop

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: uhi_morphology_synthetic_demo.yaml  uhi_real_pilot_template.yaml  uhi_synthetic_demo.yaml
docs/: architecture.md  codex_workflow.md  data_sources.md  decisions.md  dry_run_workflow.md  evaluation.md  harness_evaluation.md  harness_strategy.md  metadata_validators.md  paper_plan.md  project_status.md  prompt_completion_matrix.md  real_data_adapters.md  reference_map.md  release_checklist.md  release_notes_v0.1.0.md  release_notes_v0.2.0.md  release_readiness.md  release_readiness_v0.2.md  roadmap.md  scientific_reliability_audit.md  skills_usage.md  v0.2_issues.md  v0.2_plan.md  v0.2_release_audit.md  validators.md
geosciloop/: __init__.py  cli.py
geosciloop/adapters/: __init__.py  base.py  fixture_adapter.py  gee.py  gee_adapter.py  osm.py  osm_adapter.py  provenance.py  registry.py  stac.py  stac_adapter.py
geosciloop/agents/: __init__.py  critic.py  planner.py  writer.py
geosciloop/benchmark/: __init__.py  evaluator.py
geosciloop/core/: __init__.py  artifact_store.py  ledger.py  runner.py  schema.py  state.py
geosciloop/report/: dry_run_writer.py  markdown_writer.py  summary_writer.py
geosciloop/tools/: __init__.py  modeling.py  plotting.py  spatial_grid.py  spectral_indices.py  synthetic_data.py
geosciloop/validators/: __init__.py  metadata.py  (+5 more)
scripts/: check_skills.py  print_project_guidance.py
tests/: test_cli.py  test_dry_run_workflow.py  test_evaluator.py  test_metadata_validators.py  test_real_data_adapters.py  test_schema.py  test_synthetic_data.py  test_validators.py  test_workflow_uhi.py
(+13 files in other folders)
