[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geosciloop"
version = "0.2.0"
description = "Reproducibility-first remote-sensing/GIS workflow scaffold with offline synthetic demos and fixture-based dry-run real-data planning."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "GeoSciLoop contributors" }]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "PyYAML>=6.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
geo = []
gee = []

[project.scripts]
geosciloop = "geosciloop.cli:main"

[tool.setuptools.packages.find]
include = ["geosciloop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider --basetemp=pytest_tmp"
